--- a/app/views/about/_bio.html.erb
+++ b/app/views/about/_bio.html.erb
@@ -1,7 +1,7 @@
-<!-- about -->
+about -->
 <a id="About"></a>
 <div class="about">
-  <div class="skillbox">
+  <!-- <div class="skillbox">
     <h4 class="resources">What I Can Use</h4>
     <ul class="skills">
       <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Ruby on Rails</li>
@@ -17,12 +17,12 @@
     <ul class="skills">
       <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;MySQL</li>
       <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;Javascript</li>
-      <!-- <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;#</li>
+     <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;#</li>
       <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;#</li>
       <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;#</li>
       <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;#</li>
-      <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;#</li> -->
-    </ul>
+      <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;#</li>
+    </ul> -->
   </div>
 
 
@@ -30,24 +30,13 @@
     <h1 class="bio-header">About Me</h1>
     <br>
     <ul class="aboutlist">
-      <li class="aboutlist">A <span style="color: #B02B2C">Ruby on Rails</span> developer.</li>
-      <li class="aboutlist">Earned a Neuroscience B.A. (Has fond memory of being bitten by a lab rat.)</li>
-      <li class="aboutlist">Inspired by Marc Andreessen’s 2011 article "<%= link_to 'Why Software Is Eating the World', 'http://online.wsj.com/news/articles/SB10001424053111903480904576512250915629460', target: '_blank' %>".</li>
-      <li class="aboutlist">Likes eating watermelon & doing the moonwalk.</li>
+     <!--  <li class="aboutlist">Inspired by Marc Andreessen’s 2011 article "<%= link_to 'link text', 'http://online.wsj.com/', target: '_blank' %>".</li> -->
+      <li class="aboutlist"></li>
     </ul>
 
     <br>
     <br>
 
-    <h3>How Am I Learning Web Development?</h3>
-    <ul class="aboutlist">
-      <h4 class="resources">Online Resources:</h4>
-      <li class="aboutlist"><%= link_to 'Codecademy.com', "http://www.codecademy.com", target: '_blank' %> </li>
-      <li class="aboutlist"><%= link_to 'Lynda.com', 'http://www.lynda.com', target: '_blank' %></li>
-      <li class="aboutlist"><%= link_to 'Railscasts.com', 'http://www.railscasts.com', target: '_blank' %></li>
-      <h4 class="resources">Books:</h4>
-      <li class="aboutlist"><i>Agile Web Development with Rails 4</i>&nbsp;&nbsp;(The Pragmatic Programmers)</li>
-      <li class="aboutlist"><%= link_to raw('<i>Ruby on Rails Tutorial</i> &nbsp; by Michael Hartl'),'http://ruby.railstutorial.org/ruby-on-rails-tutorial-book', target: '_blank' %></li>
-    </ul>
+
 </div> <!-- Bio end -->
-</div> <!-- About end -->
+</div> <!-- About end
