--- a/app/views/about/_bio.html.erb
+++ b/app/views/about/_bio.html.erb
@@ -17,11 +17,6 @@
     <ul class="skills">
       <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;MySQL</li>
       <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;Javascript</li>
-     <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;#</li>
-      <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;#</li>
-      <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;#</li>
-      <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;#</li>
-      <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;#</li>
     </ul> -->
   </div>
 
@@ -30,7 +25,7 @@
     <h1 class="bio-header">About Me</h1>
     <br>
     <ul class="aboutlist">
-     <!--  <li class="aboutlist">Inspired by Marc Andreessen’s 2011 article "<%= link_to 'link text', 'http://online.wsj.com/', target: '_blank' %>".</li> -->
+      <li class="aboutlist">Inspired by Marc Andreessen’s 2011 article "<%= link_to 'link text', 'http://online.wsj.com/', target: '_blank' %>".</li>
       <li class="aboutlist"></li>
     </ul>
 
