--- a/app/views/about/_bio.html.erb
+++ b/app/views/about/_bio.html.erb
@@ -5,29 +5,25 @@
     <h4 class="resources">What I Can Use</h4>
     <ul class="skills">
       <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Ruby on Rails</li>
-      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;CSS</li>
-      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;HTML</li>
-      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;HAML</li>
-      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Twitter Bootstrap</li>
-      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Git/GitHub</li>
-      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Heroku</li>
-      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Adobe Photoshop</li>
-    </ul>
-    <h4 class="resources">What I Am Improving On</h4>
-    <ul class="skills">
-      <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;MySQL</li>
-      <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;Javascript</li>
     </ul> -->
   </div>
 
 
   <div class="bio">
     <h1 class="bio-header">About Me</h1>
+    <div class="linkedin"><%= link_to image_tag("linkedin.jpg"), "http://www.linkedin.com/in/melzhang/", :target => "_blank" %></div>
+
+    <a href="https://github.com/z22" style="color: #8A8AE6" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
+
     <br>
+    <br>
+
     <ul class="aboutlist">
-      <li class="aboutlist">Inspired by Marc Andreessen’s 2011 article "<%= link_to 'link text', 'http://online.wsj.com/', target: '_blank' %>".</li>
-      <li class="aboutlist"></li>
+
+      <li class="aboutlist">Interesting facts about me "<%= link_to 'link text', 'http://online.wsj.com/', target: '_blank' %>".</li>
+      <li class="aboutlist">La la la</li>
     </ul>
+
 
     <br>
     <br>
