--- a/app/views/about/_bio.html.erb
+++ b/app/views/about/_bio.html.erb
@@ -15,13 +15,20 @@
 
     <a href="https://github.com/z22" style="color: #8A8AE6" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
 
+    <div style="width: 600px; height: 600px; padding-bottom: 30px;">
+    <script src="http://cdn.tagul.com/embed/bt64upsnjjqv"></script>
+    <!-- Please don't remove attribution to Tagul.com -->
+    <div style="display: table; margin: 0 auto;"><a href="http://tagul.com/">Created with Tagul.com</a></div>
+    </div>
+
     <br>
     <br>
 
     <ul class="aboutlist">
 
-      <li class="aboutlist">Interesting facts about me "<%= link_to 'link text', 'http://online.wsj.com/', target: '_blank' %>".</li>
-      <li class="aboutlist">La la la</li>
+      <!-- <li class="aboutlist">Interesting facts about me "<%= link_to 'link text', 'http://online.wsj.com/', target: '_blank' %>".</li> -->
+      <!-- <li class="aboutlist">Psychology </li>
+      <li class="aboutlist">Learning Ruby on Rails, CSS, HTML</li> -->
     </ul>
 
 
