--- a/app/views/about/_bio.html.erb
+++ b/app/views/about/_bio.html.erb
@@ -16,9 +16,8 @@
     <a href="https://github.com/z22" style="color: #8A8AE6" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
 
     <div style="width: 600px; height: 600px; padding-bottom: 30px;">
-    <script src="http://cdn.tagul.com/embed/bt64upsnjjqv"></script>
-    <!-- Please don't remove attribution to Tagul.com -->
-    <div style="display: table; margin: 0 auto;"><a href="http://tagul.com/">Created with Tagul.com</a></div>
+      <%=link_to image_tag("cloud.png"), "https://tagul.com", :target => "_blank" %>
+    <!-- <script src="http://cdn.tagul.com/embed/bt64upsnjjqv"></script> -->
     </div>
 
     <br>
