--- a/app/views/about/_bio.html.erb
+++ b/app/views/about/_bio.html.erb
@@ -11,25 +11,29 @@
 
   <div class="bio">
     <h1 class="bio-header">About Me</h1>
-    <div class="linkedin"><%= link_to image_tag("linkedin.jpg"), "http://www.linkedin.com/in/melzhang/", :target => "_blank" %></div>
 
-    <a href="https://github.com/z22" style="color: #8A8AE6" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
-
-    <div style="width: 600px; height: 600px; padding-bottom: 30px;">
-      <%=link_to image_tag("cloud.png"), "https://tagul.com", :target => "_blank" %>
+    <%=link_to image_tag("cloud.png"), "https://tagul.com", :target => "_blank" %>
     <!-- <script src="http://cdn.tagul.com/embed/bt64upsnjjqv"></script> -->
-    </div>
+
 
     <br>
     <br>
 
     <ul class="aboutlist">
-
+      <li>Interested in what makes people tick.</li>
+      <li>Studied Neuroscience at Wellesley College, with an emphasis on Psychology.</li>
+      <li>Former Pre-Med. But still knows CPR.</li>
+      <li>Wants to be more tech savvy, creative, and innovative.</li>
+      <li>Dreams of making a difference in the world.</li>
+      <li>Can teach you how to moonwalk.</li>
       <!-- <li class="aboutlist">Interesting facts about me "<%= link_to 'link text', 'http://online.wsj.com/', target: '_blank' %>".</li> -->
       <!-- <li class="aboutlist">Psychology </li>
       <li class="aboutlist">Learning Ruby on Rails, CSS, HTML</li> -->
     </ul>
 
+    <div class="linkedin"><%= link_to image_tag("linkedin.jpg"), "http://www.linkedin.com/in/melzhang/", :target => "_blank" %></div>
+
+    <a href="https://github.com/z22" style="color: #8A8AE6" target="_blank"><i class="fa fa-github-square fa-4x"></i></a>
 
     <br>
     <br>
