--- a/app/views/about/_bio.html.erb
+++ b/app/views/about/_bio.html.erb
@@ -31,7 +31,7 @@
       <li class="aboutlist">Learning Ruby on Rails, CSS, HTML</li> -->
     </ul>
 
-    <div class="linkedin"><%= link_to image_tag("linkedin.jpg"), "http://www.linkedin.com/in/melzhang/", :target => "_blank" %></div>
+    <div class="linkedin"><%= link_to image_tag("linkedin.png"), "http://www.linkedin.com/in/melzhang/", :target => "_blank" %></div>
 
     <a href="https://github.com/z22" style="color: #8A8AE6" target="_blank"><i class="fa fa-github-square fa-4x"></i></a>
 
