--- a/app/views/about/_bio.html.erb
+++ b/app/views/about/_bio.html.erb
@@ -12,7 +12,8 @@
   <div class="bio">
     <h1 class="bio-header">About Me</h1>
 
-    <%=link_to image_tag("cloud.png"), "https://tagul.com", :target => "_blank" %>
+    <div class="cloud"><%=link_to image_tag("cloud.png"), "https://tagul.com", :target => "_blank" %>
+    </div>
     <!-- <script src="http://cdn.tagul.com/embed/bt64upsnjjqv"></script> -->
 
 
