--- a/app/views/about/_bio.html.erb
+++ b/app/views/about/_bio.html.erb
@@ -12,7 +12,7 @@
   <div class="bio">
     <h1 class="bio-header">About Me</h1>
 
-    <div class="cloud"><%=link_to image_tag("cloud.png"), "https://tagul.com", :target => "_blank" %>
+    <div class="cloud"><%=link_to image_tag("design/tech_cloud.png"), "https://tagul.com", :target => "_blank" %>
     </div>
     <!-- <script src="http://cdn.tagul.com/embed/bt64upsnjjqv"></script> -->
 
@@ -21,11 +21,10 @@
     <br>
 
     <ul class="aboutlist">
-      <li>Interested in what makes people tick.</li>
+      <li>Interested in technology, design, and psychology.</li>
       <li>Studied Neuroscience at Wellesley College, with an emphasis on Psychology.</li>
       <li>Former Pre-Med. But still knows CPR.</li>
       <li>Wants to be more tech savvy, creative, and innovative.</li>
-      <li>Dreams of making a difference in the world.</li>
       <li>Can teach you how to moonwalk.</li>
       <!-- <li class="aboutlist">Interesting facts about me "<%= link_to 'link text', 'http://online.wsj.com/', target: '_blank' %>".</li> -->
       <!-- <li class="aboutlist">Psychology </li>
